--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,7 @@
 
 /* set the default color, font-size, and line height */
 html {
-  color: #333;
+  color: red;
   font-size: 1em;
   line-height: 1.4;
 }
