--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -9,9 +9,13 @@
   </head>
   <body>
   <!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
-  <h1>My Best Repo</h1>
-  <p>Yess Sir</p>
+  {{> header}}
 
+  {{> countdown}}
+
+  {{> menu}}
+
+  {{> footer}}
   <!-- AND ABOVE HERE -->
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="dist/scripts/main.js"></script>
