--- a/src/templates/partials/menu.hbs
+++ b/src/templates/partials/menu.hbs
@@ -1,5 +1,13 @@
 <section id="menu">
   <h2>Menu</h2>
   <p>Something menuish</p>
+
+  <ul>
+  {{#each menu}}
+    <li data-id="{{id}}">
+      <span class="menu-title">{{title}}</span>
+      <span class="menu-count">{{count}}</span>
+    </li>
+  {{/each}}
+</ul>    
 </section>
-    
