--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -1,3 +1,5 @@
-<footer>
+<footer class="footer-container">
+  <div class="wrap">
   <small>&copy; {{year}} Snacks in Space</small>
+</div>
 </footer>
