--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -1,7 +1,9 @@
-<header>
+<header class="header-container">
+  <div class="wrap">
   <img src="dist/img/LogoLiten.jpg" alt="Logo">
   <h1>My Best Repo</h1>
   <p>Yess Sir</p>
 
   <a href="#">Register to Attend</a>
+</div>
 </header>
