--- a/src/templates/partials/menu.hbs
+++ b/src/templates/partials/menu.hbs
@@ -1,4 +1,5 @@
-<section id="menu">
+<section id="menu" class="section-container">
+  <div class="wrap">
   <h2>Menu</h2>
   <p>Something menuish</p>
 
@@ -9,5 +10,6 @@
       <span class="menu-count">{{count}}</span>
     </li>
   {{/each}}
-</ul>    
+</ul>
+</div>
 </section>
