--- a/src/styles/modules/base.less
+++ b/src/styles/modules/base.less
@@ -1,7 +1,7 @@
 
 /* set the default color, font-size, and line height */
 html {
-  color: #333;
+  color: @brown;
   font-size: 1em;
   line-height: 1.4;
 }
@@ -15,4 +15,9 @@ object {
 .wrap {
   max-width: 1100px;
   margin: 0 auto;
+}
+
+.section-list,
+.section-heading {
+  .reset;
 }
