--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -4,6 +4,6 @@
   <h1>My Best Repo</h1>
   <p>Yess Sir</p>
 
-  <a href="#">Register to Attend</a>
+  <a class="btn" href="#">Register to Attend</a>
 </div>
 </header>
