--- a/src/templates/partials/menu.hbs
+++ b/src/templates/partials/menu.hbs
@@ -1,9 +1,9 @@
-<section id="menu" class="section-container">
+<section id="menu" class="menu-container">
   <div class="wrap">
-  <h2>Menu</h2>
+  <h2 class="section-heading">Menu</h2>
   <p>Something menuish</p>
 
-  <ul>
+  <ul class="section-list">
   {{#each menu}}
     <li data-id="{{id}}">
       <span class="menu-title">{{title}}</span>
