--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,3 +1,9 @@
 @import "../../node_modules/normalize.css/normalize.css";
+@import "modules/color-variables.less";
+@import "modules/mixins.less";
 @import "modules/base.less";
 @import "modules/helper.less";
+@import "modules/header.less";
+@import "modules/countdown.less";
+@import "modules/footer.less";
+@import "modules/menu.less";
