--- a/src/styles/modules/base.less
+++ b/src/styles/modules/base.less
@@ -21,3 +21,25 @@ object {
 .section-heading {
   .reset;
 }
+
+.section-list {
+  li {
+    list-style: none;
+  }
+}
+
+/* link styles */
+a,
+a:visited,
+.link {
+  background: @red;
+  color: @light-bg;
+  text-decoration: none;
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background: lighten(@red, 2%);
+    color: darken(@light-bg, 10%);
+  }
+}
