--- a/src/styles/modules/menu.less
+++ b/src/styles/modules/menu.less
@@ -1,3 +1,26 @@
 .menu-container {
   background: @dark-bg;
 }
+
+.menu-list {
+  li {
+    padding: 4px;
+    margin-bottom: 1em;
+    line-height: 2;
+  }
+
+  .menu-title {
+    display: inline-block;
+    font-weight: bold;
+    width: 80%;
+  }
+
+
+  .menu-count {
+    display: inline-block;
+    background: @light-bg;
+    color: @red;
+    width: 20%;
+
+  }
+}
