--- a/src/templates/partials/menu.hbs
+++ b/src/templates/partials/menu.hbs
@@ -3,11 +3,10 @@
   <h2 class="section-heading">Menu</h2>
   <p>Something menuish</p>
 
-  <ul class="section-list">
+  <ul class="section-list menu-list">
   {{#each menu}}
-    <li data-id="{{id}}">
-      <span class="menu-title">{{title}}</span>
-      <span class="menu-count">{{count}}</span>
+    <li class="link" data-id="{{id}}">
+      <span class="menu-title">{{title}}</span><span class="menu-count">{{count}}</span>
     </li>
   {{/each}}
 </ul>
