--- a/src/styles/modules/menu.less
+++ b/src/styles/modules/menu.less
@@ -24,3 +24,17 @@
 
   }
 }
+
+@media screen and (min-width: 620px) {
+  .menu-list {
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+
+    li {
+      width: 31%;
+      margin: 10px 1%;
+    }
+
+  }
+}
