--- a/src/templates/partials/countdown.hbs
+++ b/src/templates/partials/countdown.hbs
@@ -1,9 +1,9 @@
 <section id="countdown" class="countdown-container">
   <div class="wrap">
   <ul class="section-list countdown-list">
-    <li>Years</li>
-    <li>Days</li>
-    <li>Hours</li>
+    <li><span id="years"></span> Years</li>
+    <li><span id="months"></span> Months</li>
+    <li><span id="days"></span> Days</li>
   </ul>
 </div>
 </section>
